Gold 클래스 생성 및 Item::use() 함수 수정
- Item::use() 함수 "순수 가상 함수" -> "가상 함수" 변경
- Item 클래스 멤버 추가 : quantity, name

--- a/main/main.vcxproj
+++ b/main/main.vcxproj
@@ -128,12 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AttackBoost.cpp" />
+    <ClCompile Include="Gold.cpp" />
     <ClCompile Include="HealthPotion.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackBoost.h" />
+    <ClInclude Include="Gold.h" />
     <ClInclude Include="HealthPotion.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Monster.h" />
