--- a/main/main.vcxproj
+++ b/main/main.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Character\Character.cpp" />
     <ClCompile Include="AttackBoost.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="Gold.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="Orc.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Character\Character.h" />
     <ClInclude Include="AttackBoost.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Gold.h" />
