--- a/main/main.vcxproj
+++ b/main/main.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="..\Character\Character.cpp" />
     <ClCompile Include="AttackBoost.cpp" />
+    <ClCompile Include="FileReaderManager.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="Gold.cpp" />
@@ -143,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="..\Character\Character.h" />
     <ClInclude Include="AttackBoost.h" />
+    <ClInclude Include="FileReaderManager.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Gold.h" />
