Store 클래스 생성 및 함수 틀 작성

--- a/main/main.vcxproj
+++ b/main/main.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Orc.cpp" />
+    <ClCompile Include="Store.cpp" />
     <ClCompile Include="StrangePotion.cpp" />
     <ClCompile Include="Troll.cpp" />
     <ClCompile Include="Wolf.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Item.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Orc.h" />
+    <ClInclude Include="Store.h" />
     <ClInclude Include="StrangePotion.h" />
     <ClInclude Include="StrongMonster.h" />
     <ClInclude Include="Troll.h" />
